<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterNewUserActivity">

    <TextView
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NickName"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_input_field"
        app:layout_constraintEnd_toStartOf="@+id/name_input_field"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name_input_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/email_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        app:layout_constraintBaseline_toBaselineOf="@+id/email_input_field"
        app:layout_constraintStart_toStartOf="@+id/name_field" />

    <EditText
        android:id="@+id/email_input_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password_register_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input_field" />

    <TextView
        android:id="@+id/password_register_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        app:layout_constraintBaseline_toBaselineOf="@+id/password_register_input_field"
        app:layout_constraintStart_toStartOf="@+id/email_desc" />

    <EditText
        android:id="@+id/password_register_input_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_field" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_button" />
</androidx.constraintlayout.widget.ConstraintLayout>